# optipacker.rs

./: Cargo.toml  README.md
examples/: .gitignore  bevy_loading.rs  optimize_and_pack.rs
examples/assets/textures/: .gitignore
scripts/: watch_run.sh
src/: lib.rs
src/templates/: bevy.rs.tmpl
